# timekpr

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT  INSTALL  README  TODO  helper.cpp  helper.h  install-dev.sh  install.sh  kcm_timekprkde.actions  timekpr_kde.py  timekprcommon.py  timekprcommon_kde.py  timekprpam.py  timekprpam_kde.py  uninstall.sh
root/etc/: timekpr.conf
root/etc/security/: access.conf  time.conf
root/etc/timekpr/: sudoer  victim
script/: timekpr.postinst  timekpr.postrm
src/: CMakeLists.txt  kcm_timekpr.desktop  kcm_timekpr.py
src/backend/: .CMakeLists.txt.kate-swp  CMakeLists.txt  getscreen.py  timekpr.py  timekprcommon.py  timekprpam.py
src/backend/etc/: timekpr.conf
src/backend/etc/timekpr/: timekpr.conf  timekprdefault
src/helper/: helper.cpp  helper.h  kcm_timekpr.actions
src/icons/: CMakeLists.txt
src/kcm/: CMakeLists.txt  kcm_timekpr.desktop  kcm_timekpr.py
src/kcm/helper/: CMakeLists.txt  helper.cpp  helper.h  kcm_timekpr.actions
src/kcm/ui/: grant.ui  limits.ui  limits_new.ui  limits_new2.ui  limits_new3.ui  main.ui  status.ui
src/legacy/: timekpr.py  timekprcommon.py  timekprpam.py
src/original/debian/: changelog
src/plasma-applet/: CMakeLists.txt  plasma-applet-timekpr.desktop  timekprapplet.cpp  timekprapplet.h
src/plasma-dataengine/: CMakeLists.txt  plasma-dataengine-timekpr.desktop  timekprdataengine.cpp  timekprdataengine.h
src/plasma-dataengine/.kdev4/: plasma-dataengine.kdev4
src/ui/: grant.ui  limits.ui
testfile/: timekpr.conf
ui/: grant.ui  limits.ui  main.ui  status.ui
ui/testing_and_garbage/: bla.ui  limits.ui  limits_labeled.ui  main_old.ui  main_tabbed.ui  status_bak.ui  timekpr_kde_ui_bak.ui  zbak_limits_labeled_test.ui
