PROJECT(timekpr-kde)

FIND_PACKAGE(KDE4 REQUIRED)
FIND_PACKAGE(PyQt4 REQUIRED)
FIND_PACKAGE(PyKDE4 REQUIRED)

#FIND_PROGRAM(PYKDEUIC4 NAMES pykdeuic4 PATHS /bin /usr/bin /usr/local/bin)

IF(NOT PYKDEUIC4)
    MESSAGE(FATAL_ERROR "Unable to find 'gzip' program") 
ENDIF(NOT PYKDEUIC4)

INSTALL(FILES README DESTINATION ${DATA_INSTALL_DIR}/timekpr-kde/root)

#kde4_add
#INSTALL(FILES timekpr-kde.desktop DESTINATION ${SERVICES_INSTALL_DIR})